--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@reduxjs/toolkit": "^2.9.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "sass": "^1.94.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -26,6 +27,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "mini-css-extract-plugin": "^2.9.4",
+    "sass-loader": "^16.0.6",
     "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2",
